# fast-forward

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  index.scip
.github/workflows/: rust.yml
assets/: config.toml
src/: applications.rs  assets.rs  commander.rs  config.rs  hotkey.rs  logger.rs  main.rs  socket.rs  theme.rs  tray.rs  window.rs
src/commander/: events.rs  handlers.rs  mod.rs
src/components/: mod.rs
src/components/input/: mod.rs
src/components/list/: mod.rs
src/proto/: socket.proto
src/ui/: mod.rs
src/ui/icon/: mod.rs
src/ui/input/: blink_cursor.rs  mod.rs
src/ui/list/: mod.rs
swift-lib/: Package.resolved  Package.swift  lib.swift
swift-lib/Sources/: main.swift  socket.pb.swift
swift-lib/src/: lib.swift
